--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,14 @@
 buildscript {
+  ext {
+    agp_version = '8.7.2'
+  }
   repositories {
     google()
     mavenCentral()
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:7.2.1"
+    classpath "com.android.tools.build:gradle:$agp_version"
   }
 }
 
@@ -49,8 +52,8 @@ android {
   }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility BeaconRadar_ndkversion
+    targetCompatibility BeaconRadar_ndkversion
   }
 
 }
@@ -66,8 +69,10 @@ dependencies {
   // For < 0.71, this will be from the local maven repo
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
-  implementation "com.facebook.react:react-native:+"
-  implementation 'org.altbeacon:android-beacon-library:+'
+  implementation "com.facebook.react:react-android:+"
+  implementation 'org.altbeacon:android-beacon-library:2.20.6'
+  implementation 'androidx.annotation:annotation-jvm:1.9.1'
+  implementation 'androidx.core:core:1.15.0'
 }
 
 if (isNewArchitectureEnabled()) {
