--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-beacon-radar",
-  "version": "0.3.2",
+  "name": "react-native-beacon-radar-px",
+  "version": "0.3.4",
   "description": "Module to scan for iBeacons on iOS and Android, within React Native and Expo managed projects.",
   "main": "app.plugin.js",
   "module": "lib/module/index",
@@ -36,7 +36,8 @@
     "release": "release-it",
     "example": "yarn --cwd example",
     "bootstrap": "yarn example && yarn install && yarn example pods",
-    "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build"
+    "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build",
+    "prepare": "bob build"
   },
   "keywords": [
     "react-native",
@@ -76,7 +77,7 @@
     "prettier": "^2.0.5",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-builder-bob": "^0.20.0",
+    "react-native-builder-bob": "^0.30.2",
     "release-it": "^15.0.0",
     "typescript": "^4.5.2"
   },
