--- a/android/build.gradle
+++ b/android/build.gradle
@@ -78,8 +78,8 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-android:+"
   implementation 'org.altbeacon:android-beacon-library:2.20.6'
-  implementation 'androidx.annotation:annotation-jvm:1.9.1'
-  implementation 'androidx.core:core:1.13.1'
+//  implementation 'androidx.annotation:annotation-jvm:1.9.1'
+//  implementation 'androidx.core:core:1.13.1'
 }
 
 if (isNewArchitectureEnabled()) {
